# ggsock

./: .gitignore  CMakeLists.txt  README.md
build-em/: compile.sh
include/ggsock/: Communicator.h  common.h  communicator.h  file-server.h  serialization.h
src/: CMakeLists.txt  Communicator.cpp  communicator.cpp  file-server.cpp  serialization.cpp
tests/: CMakeLists.txt  test0.cpp
tools/: CMakeLists.txt  test-client.cpp  test-file-client.cpp  test-file-server.cpp  test-server.cpp  test_client.cpp  test_server.cpp
